test: attempt at manager setting in AD

--- a/example_config.json
+++ b/example_config.json
@@ -7,6 +7,6 @@
 "basecampP":true,
 "company":"Ecotrust",
 "temporary":true,
-"manager":"aspeaks",
+"manager":"alexander speaks",
 "description":"just this guy, you know?"
 }
